apps/base/media/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
spec:
  type: ClusterIP
  selector:
    app: qui
  ports:
    - name: http
      targetPort: 7476
      port: 7476
