apps/base/media/qui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qui.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: qui
          port: http
  tls:
    secretName: ${CERT_SECRET_INTERNAL}
